--- a/install
+++ b/install
@@ -26,16 +26,16 @@ install() {
 	PERMS="$3"
 	OWNER="$4"
 	ls "$DST"
-	./makoset "$SRC" >"$DST"
-	chmod "$PERMS" "$DST"
-	chown "$OWNER" "$DST"
+#	./makoset "$SRC" >"$DST"
+#	chmod "$PERMS" "$DST"
+#	chown "$OWNER" "$DST"
 }
 
 if [ "$1" == "ilo" ]; then
-	install "ilo/conf/apache2/ports.conf" "/etc/conf/apache2/ports.conf" 644 root:root
-	install "ilo/conf/apache2/conf-enabled/security.conf" "/etc/conf/apache2/conf-enabled/security.conf" 644 root:root
-	install "ilo/conf/apache2/mods-enabled/ssl.conf" "/etc/conf/apache2/mods-enabled/ssl.conf" 644 root:root
-	install "ilo/conf/apache2/sites-enabled/000-default.conf" "/etc/conf/apache2/sites-enabled/000-default.conf" 644 root:root
+	install "ilo/conf/apache2/ports.conf" "/etc/apache2/ports.conf" 644 root:root
+	install "ilo/conf/apache2/conf-enabled/security.conf" "/etc/apache2/conf-enabled/security.conf" 644 root:root
+	install "ilo/conf/apache2/mods-enabled/ssl.conf" "/etc/apache2/mods-enabled/ssl.conf" 644 root:root
+	install "ilo/conf/apache2/sites-enabled/000-default.conf" "/etc/apache2/sites-enabled/000-default.conf" 644 root:root
 
 	systemctl restart apache2
 elif [ "$1" == "storage" ]; then
