--- a/install
+++ b/install
@@ -32,6 +32,11 @@ install() {
 }
 
 if [ "$1" == "ilo" ]; then
+	chmod 755 .
+	chmod 755 ilo
+	chmod 755 ilo/wsgi
+	chown -R www-data:www-data ilo/wsgi
+
 	install "ilo/conf/apache2/ports.conf" "/etc/apache2/ports.conf" 644 root:root
 	install "ilo/conf/apache2/conf-enabled/security.conf" "/etc/apache2/conf-enabled/security.conf" 644 root:root
 	install "ilo/conf/apache2/mods-enabled/ssl.conf" "/etc/apache2/mods-enabled/ssl.conf" 644 root:root
