--- a/install
+++ b/install
@@ -44,7 +44,10 @@ if [ "$1" == "ilo" ]; then
 	install "ilo/conf/apache2/conf-enabled/security.conf" "/etc/apache2/conf-enabled/security.conf" 644 root:root
 	install "ilo/conf/apache2/mods-enabled/ssl.conf" "/etc/apache2/mods-enabled/ssl.conf" 644 root:root
 	install "ilo/conf/apache2/sites-enabled/000-default.conf" "/etc/apache2/sites-enabled/000-default.conf" 644 root:root
+	install "ilo/services/monitor_uptime.service" "/etc/systemd/monitor_uptime.service" 644 root:root
 
+	systemctl enable monitor_uptime
+	systemctl start monitor_uptime
 	systemctl restart apache2
 elif [ "$1" == "storage" ]; then
 	echo "Not implemented."
